# Hello-RubyExt

./: main.rb
ext/: .gitignore  CMakeLists.txt  ext.c  extconf.rb
